--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,50 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-async-timeout==4.0.2
-base58==2.1.1
-bitarray==1.2.2
-certifi==2021.10.8
-charset-normalizer==2.0.12
-cytoolz==0.11.2
-eip712-structs==1.1.0
-eth-abi==2.1.1
-eth-account==0.5.7
-eth-hash==0.3.2
-eth-keyfile==0.5.1
-eth-keys==0.3.4
-eth-rlp==0.2.1
-eth-typing==2.3.0
-eth-utils==1.10.0
-frozenlist==1.3.0
-hexbytes==0.2.2
-idna==3.3
-iniconfig==1.1.1
-ipfshttpclient==0.8.0a2
-jsonschema==3.2.0
-lru-dict==1.1.7
-multiaddr==0.0.9
-multidict==6.0.2
-netaddr==0.8.0
-packaging==21.3
-parsimonious==0.8.1
-pluggy==1.0.0
-protobuf==3.19.4
-py==1.11.0
-py-clob-client>=0.13.3
-py-order-utils>=0.0.21
-pycryptodome==3.14.1
-pyparsing==3.0.7
-pyrsistent==0.18.1
-pysha3==1.0.2
-PyYAML==6.0
-requests==2.27.1
-rlp==2.0.1
-six==1.16.0
-tomli==2.0.1
-toolz==0.11.2
-urllib3==1.26.8
-varint==1.0.2
-web3==5.28.0
-websockets==9.1
-yarl==1.7.2
-prometheus_client==0.14.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+annotated-types==0.7.0
+attrs==24.3.0
+bitarray==3.0.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+ckzg==2.0.1
+cytoolz==1.0.1
+eth-account==0.13.4
+eth-hash==0.7.1
+eth-keyfile==0.8.1
+eth-keys==0.6.1
+eth-rlp==2.1.0
+eth-typing==5.1.0
+eth-utils==5.1.0
+eth_abi==5.2.0
+frozenlist==1.5.0
+hexbytes==1.3.0
+idna==3.10
+iniconfig==2.0.0
+multidict==6.1.0
+packaging==24.2
+parsimonious==0.10.0
+pluggy==1.5.0
+poly_eip712_structs==0.0.1
+propcache==0.2.1
+prometheus_client==0.21.1
+py_clob_client==0.20.0
+py_order_utils==0.3.2
+pycryptodome==3.21.0
+pydantic==2.10.5
+pydantic_core==2.27.2
+pytest==8.3.4
+python-dotenv==1.0.1
+pyunormalize==16.0.0
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+rlp==4.0.1
+setuptools==75.1.0
+toolz==1.0.0
+types-requests==2.32.0.20241016
+typing_extensions==4.12.2
+urllib3==2.3.0
+web3==7.7.0
+websockets==13.1
+wheel==0.44.0
+yarl==1.18.3
