added .env example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-PRIVATE_KEY=
-RPC_URL=
-CLOB_API_URL=
+CLOB_API_URL=https://clob.polymarket.com/
+STRATEGY="amm"
+CONFIG="./config/amm.json"
+PRIVATE_KEY= # mandatory
+CONDITION_ID= # mandatory, fetched from Polymarket API
+FUNDER_ADDRESS= # mandatory, taken from Polymarket 'Deposit' page
+WALLET_ADDRESS= # mandatory, derived from private key
+REFRESH_FREQUENCY= # in seconds (not mandatory, default 20)
