--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,7 @@ services:
     volumes:
       - ./config:/app/config
       - ./logs:/app/logs
+    ports:
+      - "9090:9008" # Map host port 9090 to container port 9008
     # command: ./run
     command: tail -f /dev/null
